<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNewCustomer"
        android:layout_width="@dimen/size_button"
        android:layout_height="wrap_content"
        android:text="@string/btn_new_customer"
        android:layout_marginTop="@dimen/margin_button_top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnViewCustomer"
        android:layout_width="@dimen/size_button"
        android:layout_height="wrap_content"
        android:text="@string/btn_view_customer"
        android:layout_marginTop="@dimen/padding_buttons"
        app:layout_constraintTop_toBottomOf="@id/btnNewCustomer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNewPayment"
        android:layout_width="@dimen/size_button"
        android:layout_height="wrap_content"
        android:text="@string/btn_new_payment"
        android:layout_marginTop="@dimen/padding_buttons"
        app:layout_constraintTop_toBottomOf="@id/btnViewCustomer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnViewPayments"
        android:layout_width="@dimen/size_button"
        android:layout_height="wrap_content"
        android:text="@string/btn_view_payments"
        android:layout_marginTop="@dimen/padding_buttons"
        app:layout_constraintTop_toBottomOf="@id/btnNewPayment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>