<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/common_padding_min"
    app:cardCornerRadius="@dimen/common_padding_min">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_padding_min">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/client_id"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/client_name"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvID" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvBirthDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/client_birth_date"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvGender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/client_gender"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvBirthDate" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>