<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/common_padding_min"
    app:cardCornerRadius="@dimen/common_padding_min">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_padding_min">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvIDPayment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/client_id"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvIDCustomer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/payment_client_id"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvIDPayment" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTotal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pays_total"
            android:textAppearance="?attr/textAppearanceSubtitle2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvIDCustomer" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>